--- a/information-theory.tex
+++ b/information-theory.tex
@@ -73,7 +73,7 @@
 \newenvironment{tasks}{\paragraph{Задачи.}\begin{enumerate}}{\end{enumerate}}
 
 %opening
-\title{Заметки к курсу ,,Теория информации`` в СПбАУ}
+\title{Заметки к курсу ,,Теория информации``}
 \author{А.В. Смаль}
 
 \begin{document}
