Небольшие исправления. Добавлено обоснование геометрической интерпретации и улучшен вывод формулы энтропии Шеннона

--- a/information-theory.tex
+++ b/information-theory.tex
@@ -334,9 +334,12 @@ $y\sim x$.
 \item если \(p_1=\dotsb=p_k\), то \(H(\alpha) = \log k\),
 \item если \(p_1=1\), \(p_2=\dotsb=p_k=0\), то \(H(\alpha) = 0\).
 \end{itemize}
-Будем искать \(H(\alpha)\) в виде математического ожидания ,,удивления`` от исхода случайной величины (,,удивление`` зависит от вероятности данного исхода).
-\[H(\alpha) = \sum_i p_i\cdot \mathrm{impress}(p_i).\]
-Граничные условия однозначно определяют функцию \(\mathrm{impress}(p_i) = \log\frac{1}{p_i} = -\log p_i\).
+Будем искать \(H(\alpha)\) в виде математического ожидания информации, которую мы получаем от каждого исхода.
+\[H(\alpha) = \sum_i p_i\cdot \text{(информация в $a_i$)}.\]
+Как оценить, сколько информации в исходе $a_i$? Пусть $U$~--- всё пространство элементарных исходов,
+все исходы которого равновероятны. Тогда событию $\alpha = a_i$ соответствует множеству элементарных исходов меры $p_i$. Соответственно, если случилось событие $\alpha = a_i$, то размер множества согласованных с этим событием исходов уменьшается с $|U|$ до $p_i|U|$,
+т.е. событие $\alpha = a_i$ сообщает нам $\log|U| - \log(p_i|U|) = \log\frac1p_i$ битов информации.
+Пусть теперь элементарные исходы не равновероятны. В этом случае событие $\alpha = a_i$ сообщает нам информацию, которая уменьшает \emph{меру} множества возможных исходов в $p_i$ раз, т.е. опять же получаем $\log1 - \log p_i = \log\frac1p_i$.
 \begin{definition}[1948]
 Энтропия Шеннона случайной величины \(\alpha\) 
 \[
@@ -345,7 +348,7 @@ H(\alpha) = \sum_{i=1}^k p_i\cdot\log\frac1p_i.
 (По непрерывности доопределим \(0\cdot \log\frac10 = 0\).)
 \end{definition}
 
-Можно вывести это соотношение из определения Хартли более формально. 
+Можно вывести это соотношение из определения информации по Хартли другим способом. 
 Пусть $W_n$~--- это множество всех слов длины $n$ состоящих из букв $\{\seqn{a}{k}\}$,
 где каждая буква $a_i$ встречается ровно $n_i = p_i\cdot n$ раз
 (будем считать, что вероятности $p_i$ рациональны, и что множество 
@@ -649,9 +652,9 @@ H(\alpha) - \log k
         \left( \sum_{i=1}^n p_i(x,y) \right)^L = \sum_{\ell=L}^{\max|c_i| \cdot
         L} M_\ell(x,y),
     \]
-    где $M_\ell$ обозначает сумму всех получившихся одночленов степени $\ell$.
-    Заметим, что в каждом $M_\ell$ не более $2^\ell$ одночленов: в противном
-    случае код не был бы однозначно декодируемым~--- каждый одночлен (без учёта
+    где $M_\ell$ обозначает сумму всех получившихся мономов степени $\ell$.
+    Заметим, что в каждом $M_\ell$ не более $2^\ell$ мономов: в противном
+    случае код не был бы однозначно декодируемым~--- каждый моном (без учёта
     коммутативности и ассоциативности) мог получиться не более одного раза.
     
     Теперь рассмотрим значение этого выражения при \(x = y = \frac12\).
@@ -842,9 +845,9 @@ H(\alpha) - \log k
 \node[label=left:$p$] at (0,0) {};
 \end{tikzpicture}
 \end{center}
-\[
+Определим \(
 h_p = \lim_{n\to\infty} \frac{H(\seqn{\alpha}{n})}{n}.
-\]
+\)
 Найти $\max\limits_p h_p$.
 \end{exercise}
 
@@ -1059,6 +1062,38 @@ H(\gamma\mid\alpha,\beta)\ge 0, & I(\gamma:\alpha)\ge 0, & I(\gamma:\alpha\mid\b
 \]
 \end{definition}
 
+Соотношения на информационные величины имеют удобную геометрическую интерпретацию. Давайте нарисуем три круга Эйлера и сопоставим площади каждой из получившихся замкнутых области некоторую информационную величину.
+    \begin{center}
+    \begin{tikzpicture}
+        \tikzstyle{circ}=[circle, draw, inner sep=0pt, minimum width=5cm]
+
+        \draw(1.2,2) circle(2.5cm) node[xshift=-3cm]{$\alpha$};
+        \draw(3.8,2) circle(2.5cm) node[xshift=3cm] {$\beta$};
+        \draw(2.5,-0.5) circle(2.5cm) node[yshift=-3cm] {$\gamma$};
+
+        \node at (0,2.5) {$H(\alpha\mid \beta,\gamma)$};
+        \node at (5,2.5) {$H(\beta\mid \alpha,\gamma)$};
+        \node at (2.5,-1.4) {$H(\gamma\mid \alpha,\beta)$};
+
+        \node at (1.1,0) {$I(\alpha:\gamma\mid\beta)$};
+        \node at (2.5,2.7) {$I(\alpha:\beta\mid\gamma)$};
+        \node at (3.9,0) {$I(\beta:\gamma\mid\alpha)$};
+
+        \node at (2.5,1.4) {$I(\alpha:\beta:\gamma)$};
+    \end{tikzpicture}
+    \end{center}
+Мы можем проверить, что в результате получится корректное представление. Так, например, площадь круга $\alpha$ будет соответствовать 
+\[
+H(\alpha) = H(\alpha\mid \beta,\gamma) + I(\alpha:\beta\mid\gamma)
++ I(\alpha:\gamma\mid\beta) + I(\alpha:\beta:\gamma),
+\]
+а пересечение кругов $\alpha$ и $\beta$
+\[
+I(\alpha : \beta) = I(\alpha:\beta\mid\gamma) + I(\alpha:\beta:\gamma).
+\]
+В дальнейшем мы будем использовать эту геометрической интерпретацию для доказательства
+соотношений на информационные величины.
+
 \begin{statement}
     Общая информация трёх случайных величин может быть отрицательной.
 \end{statement}
@@ -1089,7 +1124,6 @@ H(\gamma\mid\alpha,\beta)\ge 0, & I(\gamma:\alpha)\ge 0, & I(\gamma:\alpha\mid\b
         \node at (1.5,0.6) {$-1$};
     \end{tikzpicture}
     \end{center}
-
 \end{proof}
 \begin{statement}
     Других неравенств для троек нет.
@@ -1144,6 +1178,7 @@ H(\gamma\mid\alpha,\beta)\ge 0, & I(\gamma:\alpha)\ge 0, & I(\gamma:\alpha\mid\b
 Таким образом утверждение упрощается до $0\le I(\beta:\gamma) + I(\alpha:\beta\mid\gamma) +
 I(\alpha:\gamma\mid\beta)$.
 \end{proof}
+
 \begin{corollary}[Теорема~\ref{thm:volume}]
 Для \(A\subset\bitstr\times\bitstr\times\bitstr\)
 \[2\chi(A) \le \chi_{12}(A) + \chi_{13}(A) + \chi_{23}(A).\]
@@ -1180,7 +1215,7 @@ I(\alpha:\gamma\mid\beta)$.
 		&\ge \mu\sum_{i \in [n]} H(X_i\mid X_{<i}) = \mu\cdot H(X).
 	\end{align*}
 \end{proof}
-У леммы Ширера есть много применений. 
+У леммы Ширера имеется множество применений. 
 \begin{example}[Подсчёт треугольников в графе]
 	Пусть $G=(V,E)$~--- неориентированный граф с $t$ треугольниками, и пусть $\ell = |E|$. Покажем, что $t\le
 	(2\ell)^{3/2} / 6$.
@@ -2915,7 +2950,7 @@ A_n = \{w_1\#w_2\#\dotsb\#w_n\#w_n\#\dotsb\#w_1\mid w_i\in\bitstr\},
 не более $(t\log m)/b + O(\log t)$, где $m$~--- число состояний машины Тьюринга. Это
 можно объяснить из неформальных соображений: каждое состояние ,,несёт`` не более $\log m$
 битов информации, за один шаг информация переносится на одну клетку, т.е. всего за $t$
-шагов мы перенесём не более $t\log m$ бит информации. Нам же нужно перенести информацию
+шагов мы перенесём не более $t\log m$ битов информации. Нам же нужно перенести информацию
 на расстояние $b$, отсюда получаем $(t\log m) / b$.
 
 \begin{theorem}
