Исправление опечатки в определении информации по Хартли (issue #1)

--- a/information-theory.tex
+++ b/information-theory.tex
@@ -120,7 +120,7 @@
 \begin{definition}
 Количество информации в второй компоненте \(A\) при известной первой
 \[\chi_{2|1} = \log\left(\max_{a\in\pi_1(A)} |A_a|\right),\]
-где $A_a = \{(a, x) \mid x\in \pi_2(A)\}$.
+где $A_a = \{x \mid (a, x)\in A\}$.
 \end{definition}
 
 \begin{theorem} 
