Цена информации: верхняя оценка с учётом округления (closes issue #2)

--- a/information-theory.tex
+++ b/information-theory.tex
@@ -157,14 +157,23 @@
 Таким образом получаем, что \(\log N = \chi(A) \le k\).
 
 \subsection{Цена информации}
-Пусть имеется некоторое неизвестное число от 1 до \(n\) (где \(n\ge2)\).
+Пусть загадано некоторое целое число от 1 до \(n\) (где \(n\ge2)\).
 Разрешается задавать любые вопросы с ответами ДА/НЕТ. При ответе ДА мы
 заплатим 1 рубль, а при ответе НЕТ~— два рубля. Сколько необходимо и достаточно заплатить для отгадывания числа?
 
-\paragraph{Верхняя оценка.} Давайте задавать вопросы так, чтобы отрицательные ответы приносили в два раза больше информации, чем положительные. Тогда за каждый бит информации мы заплатим некоторое константное количество рублей \(c\). Пусть все вопросы будут вида ,,\(x\in T\)?``. Потребуем, чтобы
+\paragraph{Верхняя оценка.} Будем задавать вопросы так, чтобы отрицательные ответы приносили в два раза больше информации, чем положительные. Тогда за каждый бит информации мы заплатим некоторое константное количество рублей \(c\). Пусть все вопросы будут вида ,,\(x\in T\)?``. Потребуем, чтобы
 \[2\cdot(\log |X| - \log|X \cap T|) = \log |X| - \log|X\cap\overline T|.\]
 Пусть \(|X \cap T| = \alpha|X|\), тогда \(|X\cap\overline T| = (1 - \alpha)|X|\),
-т.о. \(\alpha^2 = 1 - \alpha\), \(\alpha=(\sqrt 5 - 1) / 2\). При любом ответе мы заплатим \(c = 1/(-\log \alpha)\approx 1.44\) рублей за бит, а в целом~— \(\log n / (-\log\alpha)\) рублей.
+таким образом получается уравнение 
+\[2\log (1/\alpha) = \log (1/(1-\alpha)),\]
+эквивалентное квадратному уравнению
+\[\alpha^2 = 1 - \alpha.\] Из двух корней нас интересует тот, что меньше 1, т.е. \(\alpha=(\sqrt 5 - 1) / 2\). Следовательно при любом ответе мы заплатим \(c = 1/(-\log \alpha)\approx 1.44\) рублей за бит, а в целом~— \(c\log n\) рублей.
+
+В этой оценке мы полностью проигнорировали вопросы округления. Действительно, у нас никогда получится разделить множество из $n$ элементов на два в отношении $\alpha:(1-\alpha)$, т.к. $\alpha$~--- иррациональное. Поэтому на каждом вопросе будет накапливаться некоторая ошибка округления. Давайте вместо вопросов принадлежности некоторому подмножеству $T$ множества $X$ будем задавать вопрос о принадлежности отрезку с вещественными координатами. Начнём с отрезок $S = [1,n]$ и будем каждый раз уменьшать его в $1/\alpha$ раз, т.е. первым вопросом спросим, принадлежит ли $x$ отрезку $S' = [1, 1 + \alpha(n-1)]$. Длина отрезка $S'$ в $1/\alpha$ раз меньше длины отрезка $S$. Продолжим действовать так же до тех пор, пока длина отрезка не станет меньше $1$~--- в этом случае $x$ определено однозначно. После каждого вопроса длина отрезка уменьшается
+максимум в $1/(1 - \alpha) = 1/\alpha^2$, поэтому длина последнего отрезка не меньше $\alpha^2$. Таким образом длина отрезка сократится не более, чем в $(n-1)/\alpha^2$ раз. Поскольку мы каждый раз выбирали отрезки так, чтобы платить $c$ рублей за уменьшение $\log |S|$ на 1, то в сумме заплатим не более 
+\[
+    c\log((n-1)/\alpha^2) = c\log(n-1) - 2c\log \alpha = c\log(n-1) + 2.\] 
+При любом исходе мы заплатим целое число рублей, поэтому эту оценку можно уточнить до $\lfloor c\log(n-1)\rfloor + 2$.
 
 \paragraph{Нижняя оценка.} Применим рассуждение про злонамеренного противника (adversary argument). Пусть противник
 выбирает ответ ДА/НЕТ в зависимости от того, какое из двух значений \(1/(\log |X| - \log|X \cap T|)\) и \(2/(\log |X| -
@@ -424,7 +433,7 @@ H(\alpha) - \log k
 Введём обозначения для вероятностей событий совместного распределения вероятностей \((\alpha, \beta)\). Пусть пара \((a_i, b_j)\) имеет вероятность \(p_{i,j}\), событие \([\alpha=a_i]\) имеет вероятность \(p_{i,*} = p_{i,1} + \dotsb + p_{i,n}\), а событие 
 \([\beta=b_j]\)~--- вероятность \(p_{*,j} = p_{1,j} + \dotsb + p_{k,j}\). В этих обозначениях неравенство \(H(\alpha, \beta) \le H(\alpha) + H(\beta)\) переписывается как
 \[
-\sum_{i,j}\cdot p_{i,j}\cdot \log\frac1{p_{i,j}} \le
+\sum_{i,j} p_{i,j}\cdot \log\frac1{p_{i,j}} \le
 \sum_{i}\sum_{j} p_{i,j}\cdot \log\frac1{p_{i,*}} +
 \sum_{j}\sum_{i} p_{i,j}\cdot \log\frac1{p_{*,j}}.
 \]
