--- a/information-theory.tex
+++ b/information-theory.tex
@@ -474,7 +474,7 @@ H(\alpha) - \log k
 \emph{Условная (относительная) энтропия} \(\alpha\) относительно \(\beta\)
 \[H(\alpha\mid\beta) = \sum_j \Pr[\beta = b_j] \cdot H(\alpha\mid \beta = b_j). \]
 Другими словами
-\[H(\alpha\mid\beta) = \mathop{\mathrm{E}}\limits_{b_j\gets\beta}[H(\alpha\mid \beta = b_j)]. \]
+\[H(\alpha\mid\beta) = \E\limits_{b_j\gets\beta}[H(\alpha\mid \beta = b_j)]. \]
 Если подставить определение~\ref{def:cond-entropy1}, то можно получить выражение для условной энтропии через отдельные вероятности событий.
 \[H(\alpha\mid\beta) = 
 \sum_j \Pr[\beta = b_j]\cdot 
@@ -512,7 +512,7 @@ H(\alpha) - \log k
 \[
     I(\alpha:\beta) = H(\beta) - H(\beta\mid\alpha).
 \]
-Эту величину так же \emph{называют взаимной информацией случайных величин \(\alpha\) и \(\beta\)}.
+Эту величину так же называют \emph{взаимной информацией случайных величин \(\alpha\) и \(\beta\)}.
 \end{definition}
 \begin{lemma}
 Для взаимной информации выполняются следующие соотношения.
@@ -2030,22 +2030,17 @@ Y)\times Z$}~--- нужно только дополнительно потреб
 \end{proof}
 
 
-\paragraph{Метод размера прямоугольников.} Определим некоторую весовую функцию на элементах $X\times Y$.
+\paragraph{Метод размера прямоугольников.} Определим некоторую полуаддитивную меру на подпрямоугольниках $X\times Y$.
 Тогда верна следующая оценка \[
     C^R(f) \ge \frac{w(X\times Y)}{\max\limits_{\text{одноцв. } A\times B} w(A\times B)}. 
 \]
 
-
 \paragraph{Метод трудного множества (fooling set).} Это частный случай метода размера прямоугольников, 
-при котором фиксируется некоторое множество $F\subset X\times Y$, а $w(x,y)$ определяется следующим образом:
+при котором фиксируется некоторое множество $F\subset X\times Y$, а мера $w$ определяется следующим образом:
 \[
-    w(x,y) = 
-    \begin{cases}
-        1, & (x,y)\in F,\\
-        0, & (x,y)\not\in F.
-    \end{cases}
+    w(A\times B) = |(A\times B)\cap F|.
 \]
-При этом никакой прямоугольник не содержит более одного элемента из $F$. Следовательно $C^R(f) \ge |F|$.
+Если при этом никакой одноцветный прямоугольник не содержит более одного элемента из $F$, тогда $C^R(f) \ge |F|$.
 
 \paragraph{Метод ранга матрицы.} Рассмотрим \emph{матрицу функции $f$}~--- матрицу, в которой
 строки индексированы элементами $X$, столбцы~--- элементами $Y$, а в ячейке $(x,y)$ стоит $f(x,y)$.
@@ -2089,12 +2084,12 @@ Y)\times Z$}~--- нужно только дополнительно потреб
 
 \subsection{Связь протоколов и формул}
 \begin{definition}  
-    \emph{Игра Карчмера-Вигдерсона для функции $f : \{0,1\}^n \to \{0,1\}$}~--- это 
+    \emph{Игра Карчмера~--- Вигдерсона для функции $f : \{0,1\}^n \to \{0,1\}$}~--- это 
     следующая коммуникационная игра: Алиса получает $x\in f^{-1}(0)$, Боб получает 
     $y\in f^{-1}(1)$, и они вместе пытаются найти такое $i\in [n]$, что $x_i \neq y_i$. 
-    Другими словами, игра Карчмера-Вигдерсона~--- это коммуникационная задача для 
+    Другими словами, игра Карчмера~--- Вигдерсона~--- это коммуникационная задача для 
     \emph{отношения} $$R_f = \{((x,y),i)\mid x\in f^{-1}(0), y\in f^{-1}(1), x_i\neq y_i\}.$$
-    Отношение $R_f$ будем называть \emph{отношением Карчмера-Вигдерсона} для функции $f$.
+    Отношение $R_f$ будем называть \emph{отношением Карчмера~--- Вигдерсона} для функции $f$.
 \end{definition}
 
 \begin{definition}
@@ -2136,9 +2131,11 @@ Y)\times Z$}~--- нужно только дополнительно потреб
     (оценка для функции Андреева, доказана Хостадом).
 \end{remark}
 
-\begin{theorem}[Карчмер-Вигдерсон]
+
+
+\begin{theorem}[Карчмера, Вигдерсон, 1988]
     Для каждой формулы $\phi$ вычисляющей $f$, существует такой
-    протокол $\Pi_\phi$ для отношения Карчмера-Вигдерсона $R_f$, что его дерево
+    протокол $\Pi_\phi$ для отношения Карчмера~--- Вигдерсона $R_f$, что его дерево
     совпадает с деревом, описывающим структуру формулы $\phi$. 
     Верно и обратное: если есть протокол для $R_f$, 
     то есть и формула для $f$ с такой же структурой.
@@ -2181,11 +2178,12 @@ Y)\times Z$}~--- нужно только дополнительно потреб
             одновременно. В противном случае можно было бы воспользоваться свойствами 
             комбинаторных прямоугольников и дать Алисе и Бобу входы с одинаковыми $i$-ми битами,
             которые привели бы в этот же лист.
-            $$\begin{cases}
+            \[
+            \begin{cases}
                 (x,y)\in R_\ell, & x_i = 0, y_i = 1,\\
                 (x',y')\in R_\ell, & x'_i = 1, y'_i = 0.
               \end{cases} \implies (x', y) \in R_\ell.
-            $$
+            \]
             Таким образом можно считать, что в каждом листе кроме номера бита различия записаны
             также значения этого бита у Алисы и у Боба. Если в листе $\ell$ с номером бита различия $i$
             записаны ($x_i = 0$, $y_i = 1$), то $\phi_\ell = x_i$, в обратном случае
@@ -2193,7 +2191,7 @@ Y)\times Z$}~--- нужно только дополнительно потреб
     \end{itemize}
 \end{proof}
 
-Таким образом мы получили взаимно однозначное соответствие между протоколами и формулами.
+Таким образом мы получили соответствие между протоколами и формулами, сохраняющее структуру.
 Проблема в том, что сложность протоколов мы до этого измеряли в терминах максимальной 
 глубины, а сложность формул~--- в терминах количества листьев. Давайте определим сложность
 протокола в терминах количества листьев.
@@ -2234,7 +2232,7 @@ Y)\times Z$}~--- нужно только дополнительно потреб
 \begin{lemma}
     Для любого протокола $\Pi$ и любого распределения $\mu$
     \[
-    D(\Pi) \ge \IC_\mu^{ext}(\Pi) \ge \IC_\mu^{int}.
+    D(\Pi) \ge \IC_\mu^{ext}(\Pi) \ge \IC_\mu^{int}(\Pi).
     \]
 \end{lemma}
 \begin{proof}
@@ -2318,7 +2316,7 @@ Y)\times Z$}~--- нужно только дополнительно потреб
 \begin{exercise}
     Будем называть \emph{универсальным отношением} для строк длины $n$ отношение 
     $U_n = \{(x,y,i) \mid x,y\in\bits^n, x_i\neq y_i\}$ (это обобщение понятия
-    отношения Карчмера-Вигдерсона). Будем называть \emph{расширенным универсальным
+    отношения Карчмера~--- Вигдерсона). Будем называть \emph{расширенным универсальным
     отношением} для строк длины $n$ отношение $U'_n = U_n\cup \{(x,x,\perp)\mid x\in\bits^n\}$
     (решая коммуникационную задачу для расширенного универсального отношения
     Алиса и Боб могут получить \emph{одинаковые} строки и тогда они должны ответить $\perp$).
